apps/marketing/ghost-app/service-ghost.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: example/ghost-app
  name: ghost-app
  namespace: marketing
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|example|ghost-app'
  labels:
    app.kubernetes.io/name: ghost-app
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: ghost-app
