apps/marketing/ghost-app/ingress-ghost.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost-app
  namespace: marketing
spec:
  ingressClassName: nginx
  rules:
  - host: myblog.com
    http:
      paths:
      - backend:
          serviceName: ghost-app
          servicePort: 80
